--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
                             <h3>Export Config</h3>
                             <p>Save your theme settings as JSON</p>
                         </div>
+                        <div class="action-card glass-card hidden" id="toggle-mobile-view">
+                            <div class="card-icon">
+                                <i class="fas fa-desktop"></i>
+                            </div>
+                            <h3 id="toggle-view-text">Change to Windows View</h3>
+                            <p id="toggle-view-desc">Switch between mobile and desktop layout</p>
+                        </div>
                     </div>
                 </div>
 
