--- a/index.html
+++ b/index.html
@@ -170,11 +170,14 @@
                             <p>Save your theme settings as JSON</p>
                         </div>
                         <div class="action-card glass-card hidden" id="toggle-mobile-view">
+                            <div class="action-card glass-card android-only-hidden" id="toggle-view-card" style="cursor: pointer;">
                             <div class="card-icon">
-                                <i class="fas fa-desktop"></i>
+                                <i class="fas fa-layer-group" id="toggle-icon"></i>
                             </div>
-                            <h3 id="toggle-view-text">Change to Windows View</h3>
-                            <p id="toggle-view-desc">Switch between mobile and desktop layout</p>
+                            <div class="card-info">
+                                <h3 id="toggle-text">Change to Windows View</h3>
+                                <p id="toggle-desc">Stack desktop layout over mobile</p>
+                            </div>
                         </div>
                     </div>
                 </div>
