--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@
                             <h3>Export Config</h3>
                             <p>Save your theme settings as JSON</p>
                         </div>
+                        <div class="action-card glass-card android-only-hidden" id="toggle-view-card">
+                            <div class="card-icon">
+                                <i class="fas fa-layer-group" id="toggle-icon"></i>
+                            </div>
+                            <div class="card-info">
+                                <h3 id="toggle-text">Windows View</h3>
+                                <p id="toggle-desc">Switch to desktop layout</p>
+                            </div>
+                        </div>
                         <div class="action-card glass-card android-only-hidden" id="toggle-view-card" style="cursor: pointer;">
                             <div class="card-icon">
                                 <i class="fas fa-layer-group" id="toggle-icon"></i>
