--- a/index.html
+++ b/index.html
@@ -170,14 +170,15 @@
                             <p>Save your theme settings as JSON</p>
                         </div>
                         <div class="action-card glass-card android-only-hidden" id="toggle-view-card">
-                            <div class="card-icon">
-                                <i class="fas fa-layer-group" id="toggle-icon"></i>
-                            </div>
-                            <div class="card-info">
-                                <h3 id="toggle-text">Windows View</h3>
-                                <p id="toggle-desc">Switch to desktop layout</p>
-                            </div>
-                        </div>
+    <div class="card-icon">
+        <i class="fas fa-layer-group" id="toggle-icon"></i>
+    </div>
+    <div class="card-info">
+        <h3 id="toggle-text">Windows View</h3>
+        <p id="toggle-desc">Switch layout mode</p>
+    </div>
+</div>
+                        
                 </div>
 
                 <div class="platform-selector animate-slide-up">
