--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                 </button>
             </div>
         </div>
+        <div id="android-notice" class="android-banner android-only-hidden">
+    <div class="banner-content">
+        <i class="fas fa-circle-info"></i>
+        <span>Switch to <strong>Windows View</strong> from Quick Start for a better layout</span>
+        <button class="banner-close" id="close-banner"><i class="fas fa-times"></i></button>
+    </div>
+    <div class="banner-progress-container">
+        <div id="banner-progress-bar" class="banner-progress-fill"></div>
+    </div>
+</div>
     </nav>
 
     <!-- Main Content -->
