--- a/index.html
+++ b/index.html
@@ -1477,6 +1477,33 @@
             </div>
         </div>
     </div>
+</div>
+<div class="floating-social-container">
+    <button id="social-trigger" class="social-trigger-btn" title="Social Links">
+        <i class="fas fa-link"></i>
+    </button>
+    <div class="social-wrapper social-menu-hidden" id="social-menu">
+        <a href="https://www.tiktok.com/@my.ville" target="_blank" class="social-icon tiktok">
+            <div class="social-tooltip">TikTok</div>
+            <span><i class="fab fa-tiktok"></i></span>
+        </a>
+        <a href="https://www.instagram.com/chevy.ai" target="_blank" class="social-icon instagram">
+            <div class="social-tooltip">Instagram</div>
+            <span><i class="fab fa-instagram"></i></span>
+        </a>
+        <a href="https://youtube.com/@xyla-walker?si=XvT9Kzuoja5IUj8b" target="_blank" class="social-icon youtube">
+            <div class="social-tooltip">YouTube</div>
+            <span><i class="fab fa-youtube"></i></span>
+        </a>
+        <a href="https://www.linkedin.com/in/arfadh-subhan-636b1934b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="social-icon linkedin">
+            <div class="social-tooltip">LinkedIn</div>
+            <span><i class="fab fa-linkedin-in"></i></span>
+        </a>
+        <a href="https://github.com/Arfadh-Subhan" target="_blank" class="social-icon github">
+            <div class="social-tooltip">Github</div>
+            <span><i class="fab fa-github"></i></span>
+        </a>
+    </div>
 </div>  
 </body>
 </html>
