--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <h2 class="section-title" style="text-align: center; margin-bottom: 30px;">Discover Endless Inspiration: Get Pinterest for Your Setup</h2>
     <div class="platform-grid">
         
-        <a href="https://www.microsoft.com/store/productId/9NBLGGH4S7WB" target="_blank" class="platform-card glass-card pin-exact-clone">
+        <a href="https://pinterest.en.softonic.com/" target="_blank" class="platform-card glass-card pin-exact-clone">
             <div class="platform-icon pin-bg">
                 <i class="fab fa-pinterest"></i>
             </div>
